Text and colors applied. Device cpace logic added.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   go_router: ^14.0.2
   flutter_svg: ^2.0.10+1
   provider: ^6.1.2
+  storage_space: ^1.1.0
 
 dev_dependencies:
   flutter_test:
